update all process logic